feat: adding combo in product feature chore: updating swagger docs
