# docs/swagger.json
@@ -472,7 +472,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Product"
+                            "$ref": "#/definitions/domain.ProductForm"
                         }
                     }
                 ],
@@ -492,9 +492,9 @@
                 }
             }
         },
-        "/api/products/combos": {
+        "/api/products/categories": {
             "get": {
-                "description": "List all combos with their products",
+                "description": "Get all categories to filter in products by category",
                 "consumes": [
                     "application/json"
                 ],
@@ -504,110 +504,25 @@
                 "tags": [
                     "Product"
                 ],
-                "summary": "List all combos",
+                "summary": "Get all categories",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "12",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/domain.Combo"
+                                "type": "string"
                             }
                         }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create new combo of products",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Create new combo",
-                "parameters": [
-                    {
-                        "description": "combo",
-                        "name": "product",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.ComboForm"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ProductResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "ComboForm has required fields"
-                    },
-                    "409": {
-                        "description": "This Combo is already added"
-                    }
-                }
-            }
-        },
-        "/api/products/combos/{id}": {
-            "put": {
-                "description": "Update a combo by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Update a combo",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "12",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete a combo by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Delete a combo",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "12",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
                     }
                 }
             }
@@ -640,7 +555,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/domain.Product"
+                                "$ref": "#/definitions/domain.ProductForm"
                             }
                         }
                     }
@@ -705,58 +620,6 @@
         }
     },
     "definitions": {
-        "domain.Combo": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "integer"
-                },
-                "products": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domain.Product"
-                    }
-                }
-            }
-        },
-        "domain.ComboForm": {
-            "type": "object",
-            "required": [
-                "description",
-                "name",
-                "price",
-                "products"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "integer"
-                },
-                "products": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                }
-            }
-        },
         "domain.Customer": {
             "type": "object",
             "required": [
@@ -909,7 +772,7 @@
                 }
             }
         },
-        "domain.Product": {
+        "domain.ProductForm": {
             "type": "object",
             "required": [
                 "category",
@@ -950,8 +813,39 @@
         },
         "domain.ProductResponse": {
             "type": "object",
+            "required": [
+                "category",
+                "description",
+                "images",
+                "name",
+                "price"
+            ],
             "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "comboProducts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.ProductResponse"
+                    }
+                },
+                "description": {
+                    "type": "string"
+                },
                 "id": {
+                    "type": "integer"
+                },
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.ProducImage"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
                     "type": "integer"
                 }
             }
